      previously), the median p-values, the number of genes or empty.

    o Added a matrix nGenesMat to the output of consensusHeatmap() containing the
      same information as printed in the heatmap if argument cellnote="nGenes".

    o Added arguments columnnames, colorkey, colorgrad and cex to consensusHeatmap() 
      for better control of the column labels, toggling of the colorkey, color 
	   selection and text size.

    o Introduced the new function GSAheatmap(), which is similar to consensusHeatmap()
      but for only a single gene set result (gsaRes object).

DOCUMENTATION

    o Updated consensusHeatmap() man page according to new changes in the function.

    o Added man page for GSAheatmap().

    o Updated the biocViews field in the DESCRIPTION file.

CHANGES IN VERSION 1.2.11
-------------------------

BUG FIXES

    o Fixed a typo in the code which made it impossible to execute runGSA successfully 
	   with the option sample permutation.

CHANGES IN VERSION 1.2.10
-------------------------

BUG FIXES

    o Fixed a bug in diffExp() that caused an error due to incorrect collection of the
      venn diagram gene members when only using one contrast/comparison.

CHANGES IN VERSION 1.2.9
-------------------------

BUG FIXES

    o Fixed a bug in consensusHetmap() so that the adjusted p-values are actually used
      if adjusted=TRUE.

CHANGES IN VERSION 1.2.8
-------------------------

BUG FIXES

    o Fixed bug in diffExp() that in rare cases failed to output the vennMembers.

CHANGES IN VERSION 1.2.7
-------------------------

BUG FIXES

    o Changed so that argument cutoff in consensusHeatmap() can be set to an arbitrarily
      high number (e.g. Inf) to easily include all gene sets.

CHANGES IN VERSION 1.2.6
-------------------------

BUG FIXES

    o Fixed bug in loadMAdata() that removed duplicate entries in the annotation in 
      an incorrect way.

CHANGES IN VERSION 1.2.5
-------------------------

BUG FIXES
